--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
-          <a href="#">RIB<span>HAVJAIN</span></a>
+          <a href="#">RIB<span>HAV1</span></a>
         </div>
         <ul class="menu">
           <li><a href="#home" class="menu-btn">Home</a></li>
@@ -56,7 +56,7 @@
         <h2 class="title">About me</h2>
         <div class="about-content">
           <div class="column left">
-            <img src="/assets/images/profile-1.JPG" alt="" />
+            <img src="assets/images/profile-1.JPG" alt="" />
           </div>
           <div class="column right">
             <div class="text"><span class="typing-2"></span></div>
