--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
-          <a href="#">RIB<span>HAV</span></a>
+          <a href="#">RIB<span>HAV2</span></a>
         </div>
         <ul class="menu">
           <li><a href="#home" class="menu-btn">Home</a></li>
